[gd_scene load_steps=15 format=3 uid="uid://ca4yfgr8p3gi"]

[ext_resource type="Script" uid="uid://c32yvmbjsyuec" path="res://resource/ui/menu/game/navigation_bar.gd" id="1_xq0vp"]
[ext_resource type="Texture2D" uid="uid://b8qewc5715p8w" path="res://assets/ui/icons/icon_32.png" id="3_kr4y5"]
[ext_resource type="Texture2D" uid="uid://b8asnwa4cvbfk" path="res://themes/wood/graphics/smallBtnNormalSingle.png" id="3_s2dyo"]
[ext_resource type="Script" uid="uid://cj1xykbtsmsri" path="res://resource/components/ui/buttons/button_small.gd" id="5_kr4y5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wi548"]
texture = ExtResource("3_s2dyo")
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4lr1s"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 0.365, 0.365, 1)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_detail = 1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xq0vp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_h2pqm"]
atlas = ExtResource("3_kr4y5")
region = Rect2(128, 64, 32, 32)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qf67f"]

[sub_resource type="AtlasTexture" id="AtlasTexture_n5nyd"]
atlas = ExtResource("3_kr4y5")
region = Rect2(224, 32, 32, 32)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n5nyd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kr4y5"]
atlas = ExtResource("3_kr4y5")
region = Rect2(192, 32, 32, 32)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s2dyo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_s2dyo"]
atlas = ExtResource("3_kr4y5")
region = Rect2(128, 32, 32, 32)

[node name="NavigationBar" type="Control"]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("1_xq0vp")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -284.0
offset_top = -80.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="BtnProfile" type="Button" parent="MarginContainer/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
tooltip_text = "查看用户信息
快捷键 [b][color=white]J[/color][/b] "
theme_override_styles/normal = SubResource("StyleBoxTexture_wi548")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4lr1s")
theme_override_styles/hover = SubResource("StyleBoxFlat_4lr1s")
theme_override_styles/disabled = SubResource("StyleBoxFlat_4lr1s")
theme_override_styles/focus = SubResource("StyleBoxEmpty_xq0vp")
icon = SubResource("AtlasTexture_h2pqm")
icon_alignment = 1
expand_icon = true
script = ExtResource("5_kr4y5")
metadata/_custom_type_script = "uid://cj1xykbtsmsri"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="BtnMap" type="Button" parent="MarginContainer/HBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
tooltip_text = "打开探索地图
快捷键 [b][color=white]M[/color][/b] "
theme_override_styles/normal = SubResource("StyleBoxTexture_wi548")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4lr1s")
theme_override_styles/hover = SubResource("StyleBoxFlat_4lr1s")
theme_override_styles/disabled = SubResource("StyleBoxFlat_4lr1s")
theme_override_styles/focus = SubResource("StyleBoxEmpty_qf67f")
icon = SubResource("AtlasTexture_n5nyd")
icon_alignment = 1
expand_icon = true
script = ExtResource("5_kr4y5")
metadata/_custom_type_script = "uid://cj1xykbtsmsri"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="BtnTask" type="Button" parent="MarginContainer/HBoxContainer/MarginContainer3"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
tooltip_text = "查看当前任务
快捷键 [b][color=white]T[/color][/b]ask"
theme_override_styles/normal = SubResource("StyleBoxTexture_wi548")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4lr1s")
theme_override_styles/hover = SubResource("StyleBoxFlat_4lr1s")
theme_override_styles/disabled = SubResource("StyleBoxFlat_4lr1s")
theme_override_styles/focus = SubResource("StyleBoxEmpty_n5nyd")
icon = SubResource("AtlasTexture_kr4y5")
icon_alignment = 1
expand_icon = true
script = ExtResource("5_kr4y5")
metadata/_custom_type_script = "uid://cj1xykbtsmsri"

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="BtnVisitor" type="Button" parent="MarginContainer/HBoxContainer/MarginContainer4"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
tooltip_text = "查看来访者
快捷键 [b][color=white]V[/color][/b] "
theme_override_styles/normal = SubResource("StyleBoxTexture_wi548")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4lr1s")
theme_override_styles/hover = SubResource("StyleBoxFlat_4lr1s")
theme_override_styles/disabled = SubResource("StyleBoxFlat_4lr1s")
theme_override_styles/focus = SubResource("StyleBoxEmpty_s2dyo")
icon = SubResource("AtlasTexture_s2dyo")
icon_alignment = 1
expand_icon = true
script = ExtResource("5_kr4y5")
metadata/_custom_type_script = "uid://cj1xykbtsmsri"

[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer/BtnProfile" to="." method="_on_btn_profile_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer2/BtnMap" to="." method="_on_btn_map_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer3/BtnTask" to="." method="_on_btn_task_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer4/BtnVisitor" to="." method="_on_btn_visitor_pressed"]
