extends Control
class_name NavigationBar



func _on_btn_profile_pressed() -> void:
	print("_on_btn_profile_pressed")
	pass # Replace with function body.


func _on_btn_map_pressed() -> void:
	pass # Replace with function body.


func _on_btn_task_pressed() -> void:
	pass # Replace with function body.


func _on_btn_visitor_pressed() -> void:
	pass # Replace with function body.
